[package]
name = "ere-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["alloc", "serde"] }
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
twirp.workspace = true

# Server
clap = { workspace = true, features = ["derive"], optional = true }
tower-http = { workspace = true, features = ["catch-panic"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

# Local dependencies
ere-airbender = { workspace = true, features = ["zkvm"], optional = true }
ere-jolt = { workspace = true, features = ["zkvm"], optional = true }
ere-miden = { workspace = true, features = ["zkvm"], optional = true }
ere-nexus = { workspace = true, features = ["zkvm"], optional = true }
ere-openvm = { workspace = true, features = ["zkvm"], optional = true }
ere-pico = { workspace = true, features = ["zkvm"], optional = true }
ere-risc0 = { workspace = true, features = ["zkvm"], optional = true }
ere-sp1 = { workspace = true, features = ["zkvm"], optional = true }
ere-ziren = { workspace = true, features = ["zkvm"], optional = true }
ere-zisk = { workspace = true, features = ["zkvm"], optional = true }
ere-zkvm-interface = { workspace = true, features = ["clap"] }

[dev-dependencies]

[lints]
workspace = true

[build-dependencies]
prost-build.workspace = true
twirp-build.workspace = true

[features]
default = []
server = ["dep:clap", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "tokio/macros", "tokio/rt-multi-thread", "tokio/signal"]

# zkVM
airbender = ["dep:ere-airbender", "server"]
jolt = ["dep:ere-jolt", "server"]
miden = ["dep:ere-miden", "server"]
nexus = ["dep:ere-nexus", "server"]
openvm = ["dep:ere-openvm", "server"]
pico = ["dep:ere-pico", "server"]
risc0 = ["dep:ere-risc0", "server"]
sp1 = ["dep:ere-sp1", "server"]
ziren = ["dep:ere-ziren", "server"]
zisk = ["dep:ere-zisk", "server"]

# Cuda
cuda = ["ere-openvm?/cuda"]
