[package]
name = "ere-airbender"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["alloc", "serde"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

# Airbender dependencies
airbender_execution_utils.workspace = true

# Local dependencies
ere-compile-utils.workspace = true
ere-zkvm-interface.workspace = true

[dev-dependencies]
ere-test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
ere-build-utils.workspace = true

[lints]
workspace = true
