[package]
name = "ere-jolt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true

# Jolt dependencies
jolt-ark-serialize = { workspace = true, features = ["derive"] }
jolt-common.workspace = true
jolt-core.workspace = true
jolt-sdk = { workspace = true, features = ["host"], optional = true }

# Local dependencies
ere-compile-utils = { workspace = true, optional = true }
ere-zkvm-interface.workspace = true

[dev-dependencies]
ere-test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
ere-build-utils.workspace = true

[features]
default = ["compiler", "zkvm"]
compiler = ["dep:ere-compile-utils"]
zkvm = ["dep:jolt-sdk"]

[lints]
workspace = true
