[package]
name = "ere-nexus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Nexus dependencies
nexus-sdk.workspace = true
nexus-core.workspace = true
nexus-vm.workspace = true

# Local dependencies
ere-compile-utils.workspace = true
ere-zkvm-interface.workspace = true

[dev-dependencies]
ere-test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
ere-build-utils.workspace = true


[lints]
workspace = true
