[package]
name = "ere-nexus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["alloc", "serde"] }
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Nexus dependencies
nexus-core = { workspace = true, optional = true }
nexus-sdk = { workspace = true, optional = true }
nexus-vm = { workspace = true, optional = true }

# Local dependencies
ere-compile-utils = { workspace = true, optional = true }
ere-zkvm-interface.workspace = true

[dev-dependencies]
ere-test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
ere-build-utils.workspace = true

[features]
default = ["compiler", "zkvm"]
compiler = ["dep:ere-compile-utils"]
zkvm = ["dep:nexus-core", "dep:nexus-sdk", "dep:nexus-vm"]

[lints]
workspace = true
