[package]
name = "ere-openvm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml.workspace = true

# OpenVM dependencies
openvm-build.workspace = true
openvm-circuit.workspace = true
openvm-continuations.workspace = true
openvm-sdk.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true

# Local dependencies
ere-compile-utils = { workspace = true, optional = true }
ere-zkvm-interface.workspace = true

[dev-dependencies]
ere-test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
ere-build-utils.workspace = true

[features]
default = ["compiler", "zkvm"]
compiler = ["dep:ere-compile-utils"]
zkvm = []
cuda = ["openvm-sdk/cuda"]

[lints]
workspace = true
