[package]
name = "ere-pico"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["alloc", "serde"] }
sha2.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true

# Pico dependencies
pico-p3-field = { workspace = true, optional = true }
pico-vm = { workspace = true, optional = true }

# Local dependencies
ere-compile-utils = { workspace = true, optional = true }
ere-zkvm-interface.workspace = true

[dev-dependencies]
ere-test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
ere-build-utils.workspace = true

[features]
default = ["compiler", "zkvm"]
compiler = ["dep:ere-compile-utils"]
zkvm = ["dep:pico-p3-field", "dep:pico-vm"]

[lints]
workspace = true
