[package]
name = "ere-ziren"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = { workspace = true, features = ["std", "serde"] }
thiserror.workspace = true
tracing.workspace = true

# Ziren dependencies
zkm-sdk.workspace = true

# Local dependencies
ere-compile-utils.workspace = true
ere-zkvm-interface.workspace = true

[dev-dependencies]
ere-test-utils = { workspace = true, features = ["host"] }

[build-dependencies]
ere-build-utils.workspace = true

[lints]
workspace = true
